--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ okta.oauth2.issuer=${ISSUER}
 okta.oauth2.client-id=${CLIENT_ID}
 okta.oauth2.client-secret=${CLIENT_SECRET}
 okta.oauth2.scopes=openid,profile,offline_access
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
